# timespeaker

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  timespeaker.py
.github/: FUNDING.yml
resources/: systemd-timespeaker.service  timespeaker.desktop
tests/: test_main.py
timespeaker/: Makefile  main.py  timespeaker.py
timespeaker/resources/: timespeaker.desktop
