[tool.black]
line-length = 110
target-version = ["py38"]

[tool.poetry]
name = "timespeaker"
version = "0.1.4"
description = "Announce the time every hour similar to Mac OS X. Say the Time using Google TTS or espeak."
authors = ["Wallace Silva <contact@wallacesilva.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/wallacesilva/timespeaker/"
repository = "https://github.com/wallacesilva/timespeaker/"
documentation = "https://github.com/wallacesilva/timespeaker/"

[tool.poetry.scripts]
timespeaker = "timespeaker.main:cli"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/wallacesilva/timespeaker/issues"

[tool.poetry.dependencies]
python = "^3.6"
gtts = "^2.1.1"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]
flake8 = "^3.6"
black = "^20.8b1"
pytest = "^6.2.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
